fixing the extra white spaces.

--- a/src/About.css
+++ b/src/About.css
@@ -1,7 +1,7 @@
 .About-container {
     background-color: rgb(117, 131, 125);
     color: rgb(54, 54, 54);
-    height: 10em;
+    height: 3em;
     width: 100%;
   }
 
