--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,6 @@
   justify-content: space-between;
   list-style-type: none;
   margin-top: 0;
-  height: 100%;
-  width: 100%;
 }
 
 .section{
