--- a/src/Home.css
+++ b/src/Home.css
@@ -2,8 +2,7 @@
     background-image: url('./touraj.png');
     background-repeat: round;
     background-size: cover;
-    background-color: tomato;
-    height: 100%;
+    height: 30em;
     width: 100%;
     display: flex;
 }
