--- a/src/Resume.css
+++ b/src/Resume.css
@@ -8,7 +8,7 @@
 .Resume-centered {
     text-align: center;
     position: relative;
-    top: 40%;
+    top: 30%;
     left:50%;
     transform: translate(-50%, -50%);
 }
